--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,13 @@
     .title {
       padding: 10px;
       background-color: green;
+    }
+
+    .message-wrap {
+      width: 200px;
+      height: 200px;
+      overflow: auto;
+      border: 2px solid #000;
     }
   </style>
 </head>
